Update dịch vụ quan trắc

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -45,15 +45,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">DỊCH
-                            VỤ
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            DỊCH VỤ QUAN TRẮC KHÍ TƯỢNG THỦY VĂN
+                        </a>
+                        <ul class="text-center dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/solution/solution.html?thietBiQuanTrac">
+                                    Dịch vụ quan trắc khí tượng thủy văn</a></li>
+                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiQuanTrac">
+                                    Thiết bị giám sát - điều khiển trạm dữ liệu</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             HỆ THỐNG PHÒNG CHÁY - CHỮA CHÁY
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="text-center dropdown-menu">
                             <li><a class="dropdown-item" href="/html/solution/solution.html?giaiPhapBaoChay">
                                     Giải pháp quản lý cảnh báo cháy sớm</a></li>
                             <li><a class="dropdown-item" href="/html/product/product.html?thietBiBaoChay">
@@ -65,7 +74,7 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             DỊCH VỤ AN NINH
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="text-center dropdown-menu">
                             <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
                                     Thiết bị giám sát</a></li>
                             <li><a class="dropdown-item" href="/html/Security/security.html">
@@ -81,69 +90,73 @@
     </nav>
     <!-- End header -->
 
- <!-- Project Start -->
-<div class="container-fluid project py-5 mb-5">
-    <div class="container">
-        <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-            <h1 style="color: #3a389b;">Giới thiệu về AKS Việt Nam</h1>
-            <br>
-            <h5>Cung cấp các giải pháp an ninh và kỹ thuật hàng đầu, bao gồm hệ thống giám sát,
-                cảnh báo an ninh cho ngôi nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ
-                thuật và an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</h5>
-        </div>
-        <div class="row g-5 justify-content-center">
-            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                <div class="project-item">
-                    <div class="project-img">
-                        <img src="/img/Banner/AboutWeather.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
-                        <div class="project-content">
-                            <a href="/html/product/product.html?thietBiQuanTrac" class="text-center">
-                                <h4>Dịch vụ quan trắc khí tượng thủy văn</h4>
-                            </a>
+    <!-- Project Start -->
+    <div class="container-fluid project py-5 mb-5">
+        <div class="container">
+            <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
+                <h1 style="color: #3a389b;">Giới thiệu về AKS Việt Nam</h1>
+                <br>
+                <h5>Cung cấp các giải pháp an ninh và kỹ thuật hàng đầu, bao gồm hệ thống giám sát,
+                    cảnh báo an ninh cho ngôi nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ
+                    thuật và an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</h5>
+            </div>
+            <div class="row g-5 justify-content-center">
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
+                    <div class="project-item">
+                        <div class="project-img">
+                            <img src="/img/Banner/AboutWeather.jpg" class="img-fluid rounded" alt=""
+                                style="width: 100%; height: 250px; object-fit: cover;">
+                            <div class="project-content">
+                                <a href="/html/solution/solution.html?thietBiQuanTrac" class="text-center">
+                                    <h4>Dịch vụ quan trắc khí tượng thủy văn</h4>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
-                <div class="project-item">
-                    <div class="project-img">
-                        <img src="/img/Banner/AboutFire.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
-                        <div class="project-content">
-                            <a href="/html/solution/solution.html?giaiPhapBaoChay" class="text-center">
-                                <h4>Hệ thống phòng cháy chữa cháy</h4>
-                            </a>
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                    <div class="project-item">
+                        <div class="project-img">
+                            <img src="/img/Banner/AboutFire.jpg" class="img-fluid rounded" alt=""
+                                style="width: 100%; height: 250px; object-fit: cover;">
+                            <div class="project-content">
+                                <a href="/html/solution/solution.html?giaiPhapBaoChay" class="text-center">
+                                    <h4>Hệ thống phòng cháy chữa cháy</h4>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
-                <div class="project-item">
-                    <div class="project-img">
-                        <img src="/img/Banner/AboutSecurity.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
-                        <div class="project-content">
-                            <a href="/html/Security/security.html" class="text-center">
-                                <h4>Dịch vụ an ninh</h4>
-                            </a>
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
+                    <div class="project-item">
+                        <div class="project-img">
+                            <img src="/img/Banner/AboutSecurity.jpg" class="img-fluid rounded" alt=""
+                                style="width: 100%; height: 250px; object-fit: cover;">
+                            <div class="project-content">
+                                <a href="/html/Security/security.html" class="text-center">
+                                    <h4>Dịch vụ an ninh</h4>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
-                <div class="project-item">
-                    <div class="project-img">
-                        <img src="/img/Banner/AboutBms.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
-                        <div class="project-content">
-                            <a href="/html/buildingServices/bms.html" class="text-center">
-                                <h4>Dịch vụ kỹ thuật tòa nhà</h4>
-                            </a>
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                    <div class="project-item">
+                        <div class="project-img">
+                            <img src="/img/Banner/AboutBms.jpg" class="img-fluid rounded" alt=""
+                                style="width: 100%; height: 250px; object-fit: cover;">
+                            <div class="project-content">
+                                <a href="/html/buildingServices/bms.html" class="text-center">
+                                    <h4>Dịch vụ kỹ thuật tòa nhà</h4>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Project End -->
+    <!-- Project End -->
 
     <!-- Page Content-->
     <section class="pt-4">
@@ -159,7 +172,8 @@
                                     <i class="fa-solid fa-industry"></i>
                                 </div>
                                 <h2 class="fs-4 fw-bold">Sản xuất</h2>
-                                <p class="mb-0">Thiết bị báo cháy thông minh và thiết bị giám sát.</p>
+                                <p class="mb-0">Thiết bị báo cháy thông minh</p>
+                                <p class="mb=0">Thiết bị giám sát</p>
                             </div>
                         </a>
                     </div>
@@ -173,8 +187,8 @@
                                     <i class="fa-solid fa-gears"></i>
                                 </div>
                                 <h2 class="fs-4 fw-bold">Lắp đặt hệ thống</h2>
-                                <p class="mb-0">Hệ thống quan trắc khí tượng thủy văn và hệ thống phòng cháy chữa
-                                    cháy</p>
+                                <p class="mb-0">Hệ thống quan trắc khí tượng thủy văn</p>
+                                <p class="mb-0">Hệ thống phòng cháy chữa cháy</p>
                             </div>
                         </a>
                     </div>
@@ -188,9 +202,8 @@
                                     <i class="fa-solid fa-building"></i>
                                 </div>
                                 <h2 class="fs-4 fw-bold">Dịch vụ kỹ thuật tòa nhà</h2>
-                                <p class="mb-0">Building Management System (BMS) và Building Automation System
-                                    (BAS).
-                                </p>
+                                <p class="mb-0">Building Management System (BMS)</p>
+                                <p class="mb-0">Building Automation System (BAS)</p>
                             </div>
                         </a>
                     </div>
@@ -272,10 +285,14 @@
             <div class="row mb-2">
                 <div class="col">
                     <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
-                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
-                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
-                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="/html/product/product.html?thietBiQuanTrac"
+                        class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="/html/solution/solution.html?giaiPhapBaoChay"
+                        class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an
+                        ninh</a>
+                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ
+                        thuật tòa nhà</a>
                     <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </div>
