--- a/html/index.html
+++ b/html/index.html
@@ -110,7 +110,7 @@
                             <i class="fa-solid fa-cloud-bolt fa-3x"></i>
                         </div>
                         <h5 class="mb-4">Dịch vụ quan trắc khí tượng thủy văn</h5>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html?thietBiQuanTrac">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/solution/solution.html?thietBiQuanTrac">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-md-6 col-lg-3">
