--- a/html/Security/security.html
+++ b/html/Security/security.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="/CSS/security.css">
     <script src="/js/All/all.js"></script>
 </head>
+
 <body>
     <!-- Start header -->
     <div class="header-top">
@@ -42,14 +44,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">DỊCH VỤ
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            DỊCH VỤ QUAN TRẮC KHÍ TƯỢNG THỦY VĂN
+                        </a>
+                        <ul class="text-center dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/solution/solution.html?thietBiQuanTrac">
+                                    Dịch vụ quan trắc khí tượng thủy văn</a></li>
+                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiQuanTrac">
+                                    Thiết bị giám sát - điều khiển trạm dữ liệu</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             HỆ THỐNG PHÒNG CHÁY - CHỮA CHÁY
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="text-center dropdown-menu">
                             <li><a class="dropdown-item" href="/html/solution/solution.html?giaiPhapBaoChay">
                                     Giải pháp quản lý cảnh báo cháy sớm</a></li>
                             <li><a class="dropdown-item" href="/html/product/product.html?thietBiBaoChay">
@@ -61,7 +73,7 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             DỊCH VỤ AN NINH
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="text-center dropdown-menu">
                             <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
                                     Thiết bị giám sát</a></li>
                             <li><a class="dropdown-item" href="/html/Security/security.html">
@@ -84,7 +96,7 @@
             <h3 class="text-center">Dịch vụ an ninh</h3>
         </div>
         <div class="container px-4 px-lg-5 mt-5" id="showContent">
-            
+
         </div>
 
         <div class="text-center mt-5">
@@ -107,10 +119,14 @@
             <div class="row mb-2">
                 <div class="col">
                     <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
-                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
-                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
-                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="/html/product/product.html?thietBiQuanTrac"
+                        class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="/html/solution/solution.html?giaiPhapBaoChay"
+                        class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an
+                        ninh</a>
+                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ
+                        thuật tòa nhà</a>
                     <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </div>
@@ -143,4 +159,5 @@
     <!-- JavaScript -->
     <script type="module" src="/js/Security/securityService.js"></script>
 </body>
+
 </html>
