--- a/html/solution/Solution.html
+++ b/html/solution/Solution.html
@@ -43,14 +43,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">DỊCH VỤ
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            DỊCH VỤ QUAN TRẮC KHÍ TƯỢNG THỦY VĂN
+                        </a>
+                        <ul class="text-center dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/solution/solution.html?thietBiQuanTrac">
+                                    Dịch vụ quan trắc khí tượng thủy văn</a></li>
+                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiQuanTrac">
+                                    Thiết bị giám sát - điều khiển trạm dữ liệu</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             HỆ THỐNG PHÒNG CHÁY - CHỮA CHÁY
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="text-center dropdown-menu">
                             <li><a class="dropdown-item" href="/html/solution/solution.html?giaiPhapBaoChay">
                                     Giải pháp quản lý cảnh báo cháy sớm</a></li>
                             <li><a class="dropdown-item" href="/html/product/product.html?thietBiBaoChay">
@@ -62,7 +72,7 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             DỊCH VỤ AN NINH
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="text-center dropdown-menu">
                             <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
                                     Thiết bị giám sát</a></li>
                             <li><a class="dropdown-item" href="/html/Security/security.html">
@@ -83,10 +93,8 @@
         <div class="container px-4 px-lg-5 mt-5">
             <h1 class="text-center mb-5 fw-bold" id="solution-title"></h1>
             <div id="solution-details">
-            </div>
 
-            <div class="text-center mt-5">
-                <a id="view-products-btn" class="btn btn-primary btn-lg">Thiết bị phòng cháy - chữa cháy</a>
+                <a id="view-products-btn" style="display: none;"></a>
             </div>
         </div>
     </section>
@@ -105,10 +113,14 @@
             <div class="row mb-2">
                 <div class="col">
                     <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
-                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
-                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
-                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="/html/product/product.html?thietBiQuanTrac"
+                        class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="/html/solution/solution.html?giaiPhapBaoChay"
+                        class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an
+                        ninh</a>
+                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ
+                        thuật tòa nhà</a>
                     <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </div>
