--- a/html/index.html
+++ b/html/index.html
@@ -223,51 +223,8 @@
     </div>
     <!-- Featurs Section End -->
 
-    <footer class="bg-light py-3">
-        <div class="container text-center">
-            <!-- Social Media -->
-            <div class="row mb-2">
-                <div class="col">
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Facebook</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">YouTube</a>
-                </div>
-            </div>
-
-            <!-- Links -->
-            <div class="row mb-2">
-                <div class="col">
-                    <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
-                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
-                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
-                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
-                    <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
-                </div>
-            </div>
-
-            <!-- Copyright -->
-            <div class="row mb-2">
-                <div class="col">
-                    <p class="m-0">Copyright © 2025 AKS VietNam</p>
-                </div>
-            </div>
-
-            <!-- Hotline -->
-            <div class="row mb-2">
-                <div class="col">
-                    <p class="m-0">Hotline: 04.3998 2227</p>
-                </div>
-            </div>
-
-            <!-- Certification Logo -->
-            <div class="row">
-                <div class="col">
-                    <img src="/img/logo-ask-removebg-preview.png" alt="Certification Badge" class="img-fluid"
-                        style="max-width: 100px;">
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer -->
+    <div id="footer-container"></div>
 
     <!-- JavaScript Libraries -->
     <script src="/js/All/all.js"></script>
