--- a/html/buildingServices/bmsTemplate.html
+++ b/html/buildingServices/bmsTemplate.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE 🙂html>
 <html lang="en">
 
 <head>
@@ -7,11 +7,8 @@
     <link rel="icon" type="image/png" href="/img/ico.ico">
     <title>BMS - Building Management System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/CSS/all.css">
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -31,21 +28,17 @@
         </div>
     </div>
 
-   <!-- Menu loaded via JavaScript -->
-   <div id="menu-container"></div>
-   <!-- End header -->
-
+    <!-- Menu loaded via JavaScript -->
+    <div id="menu-container"></div>
+    <!-- End header -->
 
     <section class="py-3" id="showContent">
-
     </section>
 
-
     <section class="py-3">
-        <div class="container px-4 px-lg-5 mt-3">
-            <h2 class="fw-bolder mb-4 text-center">Những dịch vụ BMS:</h2>
-            <div id="related-BMSService" ;
-                class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        <div class="px-4 px-lg-5 mt-3">
+            <h2 class="fw-bolder mb-4 text-center">Những dịch vụ BMS khác:</h2>
+            <div id="related-BMSService" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             </div>
         </div>
     </section>
@@ -54,7 +47,8 @@
     <div id="footer-container"></div>
 
     <script type="module" src="/js/BuildingService/viewBMS.js"></script>
-    <script src="/js/all.js"></script>
+    <script src="/js/All/all.js"></script>
+    <script src="/js/Tech/fireTech.js"></script>
 </body>
 
 </html>
