Upodate footer, thay đổi độ dài ô hiển thị thông tin sản phẩm và sản phẩm cung cấp

--- a/html/Tech/electricTech.html
+++ b/html/Tech/electricTech.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container">
-        <h2 class="section-title">Bảng Điều Khiển Giám Sát Năng Lượng</h2>
+        <h2 class="section-title">BẢNG ĐIỀU KHIỂN VÀ GIÁM SÁT NĂNG LƯỢNG</h2>
         <div class="row">
             <!-- Phần bên trái -->
             <div class="col-md-6 left-section">
@@ -85,7 +85,7 @@
         <div class="video-section">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="title">Cách AI nhận diện được thiết bị</h1>
+                    <h1 class="title">CÁCH AI NHẬN DIỆN ĐƯỢC THIẾT BỊ</h1>
                     <p class="description">Mỗi thiết bị đều có một dấu hiệu điện đặc trưng riêng. Chúng tôi sử dụng
                         machine learning để nhận diện các thiết bị trong ngôi nhà và giúp bạn hiểu được chúng đang tiêu
                         thụ bao nhiêu năng lượng theo thời gian thực</p>
@@ -115,7 +115,7 @@
         <div class="video-section">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="title">Cách thiết bị chúng tôi giúp bạn tiết kiệm năng lượng</h1>
+                    <h1 class="title">CÁCH THIẾT BỊ CHÚNG TÔI GIÚP BẠN TIẾT KIỆM NĂNG LƯỢNG</h1>
                     <p class="description">Công nghệ AI sẽ giúp bạn theo dõi và so sánh lượng năng lượng điện đã sử dụng
                         trong thời gian thực, và trong tháng</p>
                 </div>
