--- a/html/Tech/aboutTech.html
+++ b/html/Tech/aboutTech.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/img/ico.ico">
-    <title>Công nghệ</title>
+    <title>Công nghệ áp dụng</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -34,7 +34,7 @@
 
     <!-- Technology Content -->
     <div class="container">
-        <h2 class="section-title">ĐIỀU KHIỂN GIẢM SÁT NĂNG LƯỢNG</h2>
+        <h2 class="section-title">ĐIỀU KHIỂN VÀ GIÁM SÁT NĂNG LƯỢNG</h2>
         <div class="row">
             <!-- Phần bên trái -->
             <div class="col-md-6 left-section">
