--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vn">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
@@ -38,8 +38,8 @@
             </a>
         </div>
     </div>
-
     <!-- End header -->
+
     <section id="headBanner" class="section-p1">        
         <div class="mt-3 container-fluid header-carousel px-0 mb-5">
             <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -58,7 +58,6 @@
                                         <a href="/html/aboutUs.html"
                                             class="btn btn-primary py-3 px-5 animated slideInRight">Tìm hiểu
                                             thêm</a>
-
                                     </div>
                                 </div>
                             </div>
@@ -103,8 +102,8 @@
             <div class="text-center mx-auto" style="max-width: 800px;">
                 <h3 class="display-5s mb-8">SẢN PHẨM CUNG CẤP</h3>
             </div>
-            <div class="row g-4 justify-content-center" style="max-width: 1200px; margin: 0 auto;">
-                <div class="text-center col-md-6 col-lg-3">
+            <div class="row g-4 justify-content-center align-items-stretch" style="max-width: 1200px; margin: 0 auto;">
+                <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
                             <i class="fa-solid fa-cloud-bolt fa-3x"></i>
@@ -113,7 +112,7 @@
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/solution/solution.html?thietBiQuanTrac">Tìm hiểu thêm</a>
                     </div>
                 </div>
-                <div class="text-center col-md-6 col-lg-3">
+                <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
                             <i class="fa-solid fa-fire fa-3x"></i>
@@ -122,7 +121,7 @@
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/solution/solution.html?giaiPhapBaoChay">Tìm hiểu thêm</a>
                     </div>
                 </div>
-                <div class="text-center col-md-6 col-lg-3">
+                <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
                             <i class="fa-solid fa-lock fa-3x"></i>
@@ -131,7 +130,7 @@
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/Security/security.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
-                <div class="text-center col-md-6 col-lg-3">
+                <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
                             <i class="fa-solid fa-building fa-3x"></i>
@@ -142,7 +141,7 @@
                 </div>
             </div>
         </div>
-</section>
+    </section>
 
     <section class="py-3" id="features">
         <div class="text-center mx-auto" style="max-width: 800px;">
@@ -150,7 +149,6 @@
         </div>
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="news-list">
-
             </div>
         </div>
     </section>
