Update dịch vụ và sản phẩm của khí tượng

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
     </div>
     <!-- End header -->
 
-    <section id="headBanner" class="section-p1">        
+    <section id="headBanner" class="section-p1">
         <div class="mt-3 container-fluid header-carousel px-0 mb-5">
             <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -74,7 +74,8 @@
                                             thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
                                             nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
                                             an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
-                                        <a href="/html/aboutUs.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Tìm hiểu
+                                        <a href="/html/aboutUs.html"
+                                            class="btn btn-primary py-3 px-5 animated slideInLeft">Tìm hiểu
                                             thêm</a>
                                     </div>
                                 </div>
@@ -96,47 +97,51 @@
         </div>
         <!-- Carousel End -->
     </section>
-    
+
     <section class="py-3" id="features" style="background-color: #f2f5f9 !important;">
         <div class="container py-5">
             <div class="text-center mx-auto" style="max-width: 800px;">
-                <h3 class="display-5s mb-8">SẢN PHẨM CUNG CẤP</h3>
+                <h1 class="display-5s mb-8">SẢN PHẨM CUNG CẤP</h1>
             </div>
             <div class="row g-4 justify-content-center align-items-stretch" style="max-width: 1200px; margin: 0 auto;">
                 <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-cloud-bolt fa-3x"></i>
+                            <i class="fa-solid fa-cloud-bolt fa-4x"></i>
                         </div>
                         <h5 class="mb-4">Dịch vụ quan trắc khí tượng thủy văn</h5>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/solution/solution.html?thietBiQuanTrac">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
+                            href="/html/solution/solution.html?thietBiQuanTrac">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
-                        <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-fire fa-3x"></i>
+                        <div class="feature-icon p-4 mb-4">                            
+                            <i class="fa-solid fa-house-fire fa-4x"></i>
                         </div>
                         <h5 class="mb-4">Hệ thống phòng cháy chữa cháy</h5>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/solution/solution.html?giaiPhapBaoChay">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
+                            href="/html/solution/solution.html?giaiPhapBaoChay">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-lock fa-3x"></i>
+                            <i class="fa-solid fa-lock fa-4x"></i>
                         </div>
                         <h5 class="mb-4">Dịch vụ an ninh</h5>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/Security/security.html">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
+                            href="/html/Security/security.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-building fa-3x"></i>
+                            <i class="fa-solid fa-building fa-4x"></i>
                         </div>
                         <h5 class="mb-4">Dịch vụ kỹ thuật tòa nhà</h5>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/buildingServices/bms.html">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
+                            href="/html/buildingServices/bms.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +150,7 @@
 
     <section class="py-3" id="features">
         <div class="text-center mx-auto" style="max-width: 800px;">
-            <h3 class="display-5s mb-8">Tin tức</h3>
+            <h1 class="display-5s mb-8">Tin tức</h1>
         </div>
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="news-list">
@@ -156,7 +161,7 @@
     <!-- Featurs Section Start -->
     <div class="container-fluid featurs py-5" style="background-color: #f2f5f9;">
         <div class="text-center mx-auto" style="max-width: 800px;">
-            <h3 class="display-5s mb-8">Cam kết</h3>
+            <h1 class="display-5s mb-8">Cam kết</h1>
         </div>
         <div class="container py-5">
             <div class="row g-4 justify-content-center featurs-row">
