Update bố cục của AboutUs trong giao diện điện thoại/tablet

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -110,14 +110,14 @@
                 <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100 hover-card">
                         <a href="#" class="card-link">
-                            <div class="card-body text-center p-4 p-lg-5">
+                            <div class="card-body text-center p-4 p-lg-4">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
                                     style="background-color: #3a389b !important">
                                     <i class="fa-solid fa-industry"></i>
                                 </div>
                                 <h2 class="fs-4 fw-bold">Sản xuất</h2>
-                                <p class="mb-0">Thiết bị báo cháy thông minh</p>
-                                <p class="mb-0">Thiết bị giám sát</p>
+                                <p class="mb-0">- Thiết bị báo cháy thông minh</p>
+                                <p class="mb-0">- Thiết bị giám sát</p>
                             </div>
                         </a>
                     </div>
@@ -125,14 +125,14 @@
                 <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100 hover-card">
                         <a href="#" class="card-link">
-                            <div class="card-body text-center p-4 p-lg-5">
+                            <div class="card-body text-center p-4 p-lg-4">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
                                     style="background-color: #3a389b !important">
                                     <i class="fa-solid fa-gears"></i>
                                 </div>
                                 <h2 class="fs-4 fw-bold">Lắp đặt hệ thống</h2>
-                                <p class="mb-0">Hệ thống quan trắc khí tượng thủy văn</p>
-                                <p class="mb-0">Hệ thống phòng cháy chữa cháy</p>
+                                <p class="mb-0">- Hệ thống quan trắc khí tượng thủy văn</p>
+                                <p class="mb-0">- Hệ thống phòng cháy chữa cháy</p>
                             </div>
                         </a>
                     </div>
@@ -140,14 +140,14 @@
                 <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100 hover-card">
                         <a href="#" class="card-link">
-                            <div class="card-body text-center p-4 p-lg-5">
+                            <div class="card-body text-center p-4 p-lg-4">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
                                     style="background-color: #3a389b !important">
                                     <i class="fa-solid fa-building"></i>
                                 </div>
                                 <h2 class="fs-4 fw-bold">Dịch vụ kỹ thuật tòa nhà</h2>
-                                <p class="mb-0">Building Management System (BMS)</p>
-                                <p class="mb-0">Building Automation System (BAS)</p>
+                                <p class="mb-0">- Building Management System (BMS)</p>
+                                <p class="mb-0">- Building Automation System (BAS)</p>
                             </div>
                         </a>
                     </div>
@@ -158,9 +158,8 @@
     <hr>
 
     <div class="container py-5">
-        <h2 class="text-center mb-4">Đối tác</h2>
-        <div class="row g-4">
-            <!-- Đối tác 1 -->
+        <h1 class="text-center mb-4" style="color: #3a389b;">Đối tác</h1>
+        <div class="row g-4">            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
@@ -168,16 +167,14 @@
                             class="partner-logo">
                     </div>
                 </div>
-            </div>
-            <!-- Đối tác 2 -->
+            </div>            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
                         <img src="/img/Banner/spindex-removebg-preview.png" alt="Đối tác 2" class="partner-logo">
                     </div>
                 </div>
-            </div>
-            <!-- Đối tác 3 -->
+            </div>            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
@@ -185,8 +182,7 @@
                             class="partner-logo">
                     </div>
                 </div>
-            </div>
-            <!-- Đối tác 4 -->
+            </div>            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
@@ -194,16 +190,14 @@
                             class="partner-logo">
                     </div>
                 </div>
-            </div>
-            <!-- Đối tác 5 -->
+            </div>            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
                         <img src="/img/Banner/keyoei-removebg-preview.png" alt="Đối tác 5" class="partner-logo">
                     </div>
                 </div>
-            </div>
-            <!-- Đối tác 6 -->
+            </div>            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
