--- a/html/buildingServices/bmsTemplate.html
+++ b/html/buildingServices/bmsTemplate.html
@@ -36,11 +36,11 @@
     </section>
 
     <section class="py-3">
-        <div class="px-4 px-lg-5 mt-3">
+        <div class="px-4 px-lg-5">
             <h2 class="fw-bolder mb-4 text-center">Những dịch vụ BMS khác:</h2>
             <div id="related-BMSService" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             </div>
-        </div>
+        </div>        
     </section>
 
     <!-- Footer -->
