--- a/html/product/productDetail.html
+++ b/html/product/productDetail.html
@@ -42,8 +42,8 @@
         </div>
     </section>
 
-    <section class="py-5">
-        <div class="container px-4 px-lg-5 mt-5">
+    <section>
+        <div class="container px-4 px-lg-5">
             <h2 class="fw-bolder mb-4 text-center">Những sản phẩm khác</h2>
             <div id="related-products"
                 class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
