--- a/html/buildingServices/bms.html
+++ b/html/buildingServices/bms.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/img/ico.ico">
+    <link rel="icon" type="image/png" href="/html/img/ico.ico">
     <title>BMS - Building Management System</title>
-    <link rel="stylesheet" href="/CSS/all.css">
+    <link rel="stylesheet" href="/html/CSS/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
